Fix/text-align-feedback: Fixed description alignment in Feedback (#853)
* fi alignment in feedback description

* fi alignment in feedback description

---------

--- a/src/components/Feedback/feedback.module.css
+++ b/src/components/Feedback/feedback.module.css
@@ -54,7 +54,7 @@
         justify-content: center;
         align-items: center;
         max-width: 100%;
-        max-width: 100%;
+        text-align: center;
       }
     }
 
